--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       <div class="hero-content">
         <h1>Transformez Votre Présence Digitale</h1>
         <p>Platinium : Votre partenaire stratégique pour conquérir le monde numérique et propulser votre entreprise vers de nouveaux sommets.</p>
-        <a href="#contact" class="btn">Commencez votre transformation</a>
+        <a href="https://wa.me/22665615560" class="btn">Commencez votre transformation</a>
       </div>
     </section>
 
