--- a/service.html
+++ b/service.html
@@ -595,12 +595,12 @@
                             <ul>
                                 <li>Design personnalisé</li>
                                 <li>Responsive</li>
-                                <li>Optimisation SEO</li>
+                                <li>Landing page</li>
                             </ul>
                         </div>
                         <div class="pricing-card">
                             <h3>Conception graphique</h3>
-                            <p class="price">À partir de 5.000fr</p>
+                            <p class="price">À partir de 8.000fr</p>
                             <ul>
                                 <li>Logo</li>
                                 <li>Charte graphique</li>
@@ -609,7 +609,7 @@
                         </div>
                         <div class="pricing-card">
                             <h3>Montage Vidéo et 3D</h3>
-                            <p class="price">À partir de 8.000fr </p>
+                            <p class="price">À partir de 12.000fr </p>
                             <ul>
                                 <li>Montage vidéo</li>
                                 <li>Animations 2D/3D</li>
@@ -617,17 +617,8 @@
                             </ul>
                         </div>
                         <div class="pricing-card">
-                            <h3>Marketing digital</h3>
-                            <p class="price">À partir de 35.000fr</p>
-                            <ul>
-                                <li>SEO</li>
-                                <li>Campagnes publicitaires</li>
-                                <li>Analyse et rapports</li>
-                            </ul>
-                        </div>
-                        <div class="pricing-card">
                             <h3>Gestion réseaux sociaux</h3>
-                            <p class="price">À partir de 25.000fr/mois</p>
+                            <p class="price">À partir de 45.000fr/mois</p>
                             <ul>
                                 <li>Création de contenu</li>
                                 <li>Gestion de communauté</li>
@@ -636,7 +627,7 @@
                         </div>
                         <div class="pricing-card">
                             <h3>Services de boostage</h3>
-                            <p class="price">À partir de 15.000fr/campagne</p>
+                            <p class="price">À partir de 45.000fr/campagne</p>
                             <ul>
                                 <li>Boost de publications</li>
                                 <li>Campagnes ciblées</li>
