--- a/service.html
+++ b/service.html
@@ -478,7 +478,7 @@
         <section class="hero">
             <div class="hero-content">
               <h1>Nos Services</h1>
-              <p>Chez AgenceDigitale, nous offrons une gamme complète de services digitaux pour propulser votre entreprise vers de nouveaux sommets.</p>
+              <p>Chez Platinium, nous offrons une gamme complète de services digitaux pour propulser votre entreprise vers de nouveaux sommets.</p>
             </div>
           </section>
         <section class="services">
