--- a/service.html
+++ b/service.html
@@ -1,4 +1,15 @@
 <html><head><title>Nos Services - Platinium-services</title>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FLKHWP31KV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FLKHWP31KV');
+</script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez nos services de création de sites web, conception graphique, marketing digital, SEO, SMO, publicité en ligne, montage vidéo et 3D.">
