--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <html><head><title>Platinium - Transformez votre présence en ligne</title>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FLKHWP31KV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FLKHWP31KV');
+</script>
+  
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="description" content="Platinium: Votre partenaire stratégique pour le marketing digital. Expertise en SEO, SMO, création de contenu et publicité en ligne.">
