--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,15 @@
 <html><head><title>Contact - PLatinium-services</title>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FLKHWP31KV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FLKHWP31KV');
+</script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contactez AgenceDigitale pour discuter de vos projets de transformation digitale.">
