--- a/apropos.html
+++ b/apropos.html
@@ -1,4 +1,15 @@
 <html><head><title>À propos - Platinium-services</title>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FLKHWP31KV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FLKHWP31KV');
+</script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez l'histoire, les valeurs et l'équipe derrière AgenceDigitale, votre partenaire en transformation digitale.">
