--- a/apropos.html
+++ b/apropos.html
@@ -124,6 +124,7 @@
           .hero-content {
             max-width: 800px;
             margin: 0 auto;
+            padding: 7px;
           }
 
 
@@ -417,7 +418,7 @@
             <div class="container">
                 <h2>Prêt à transformer votre présence digitale ?</h2>
                 <p>Contactez-nous dès aujourd'hui pour discuter de votre projet</p>
-                <a href="#contact" class="cta-button">Commencer maintenant</a>
+                <a href="contact.html" class="cta-button">Commencer maintenant</a>
             </div>
         </section>
     </main>
@@ -438,16 +439,15 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contactez-nous</h3>
-                    <p>Email: platiniumservices@gmail.com</p>
+                    <p>Email: shwaibkabore19@gmail.com</p>
                     <p>Téléphone: +226 65 61 55 60</p>
-                    <p>Adresse: 123 Rue du Digital, 75001 Paris</p>
                 </div>
             </div>
-            <p>&copy; 2024 Platinium-services. Tous droits réservés.</p>
+            <p>&copy; 2025 Platinium-services. Tous droits réservés.</p>
         </div>
     </footer>
     <div class="contact-buttons">
-        <a href="mailto:contact@agencedigitale.com" class="contact-button" title="Envoyer un email">
+        <a href="mailto:shwaibkabore19@gmail.com" class="contact-button" title="Envoyer un email">
             <i class="fas fa-envelope"></i>
         </a>
         <a href="https://wa.me/22665615560" class="contact-button" target="_blank" rel="noopener noreferrer" title="Contacter sur WhatsApp">
