--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
   .hero-content {
     max-width: 800px;
     margin: 0 auto;
+    padding: 7px;
   }
 
   .hero h1 {
@@ -382,8 +383,9 @@
   <main>
     <section class="hero">
       <div class="hero-content">
-        <h1>Transformez Votre Présence Digitale</h1>
-        <p>Platinium : Votre partenaire stratégique pour conquérir le monde numérique et propulser votre entreprise vers de nouveaux sommets.</p>
+        <h2>Pourquoi optimiser sa présence en ligne est indispensable ?</h2>
+        <p>Aujourd'hui avec l'expansion d'internet, optimiser votre presence en ligne est vitale pour atteindre votre clientèle, augmenter vos ventes et devancer la concurrence. N'attendez plus! 
+          </p>
         <h2>Commencez des maintenant</h2>
       </div>
     </section>
@@ -449,11 +451,11 @@
             </div>
             <div class="footer-section">
                 <h3>Contactez-nous</h3>
-                <p>Email: platiniumservices@gmail.com</p>
+                <p>Email: shwaibkabore19@gmail.com</p>
                 <p>Téléphone: +226 65 61 55 60</p>
             </div>
         </div>
-        <p>&copy; 2024 Platinium-services. Tous droits réservés.</p>
+        <p>&copy; 2025 Platinium-services. Tous droits réservés.</p>
     </div>
 </footer>
 
