--- a/contact.html
+++ b/contact.html
@@ -334,7 +334,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="hero-title">Contactez-nous</h1>
+                <h2 class="hero-title">Contactez-nous</h2>
                 <p class="hero-tagline">Discutons de votre projet et transformons vos idées en réalité</p>
             </div>
         </section>
@@ -352,7 +352,7 @@
                         <p>N'hésitez pas à nous contacter pour discuter de votre projet. Nous sommes impatients de collaborer avec vous et de contribuer à votre succès digital.</p>
                     </div>
                     <div class="contact-buttons">
-                        <a href="mailto:platiniumservices@gmail.com" class="contact-button" title="Envoyer un email">
+                        <a href="mailto:shwaibkabore19@gmail.com" class="contact-button" title="Envoyer un email">
                             <i class="fas fa-envelope"></i> Envoyer un email
                         </a>
                         <a href="https://wa.me/22665615560" class="contact-button" target="_blank" rel="noopener noreferrer" title="Contacter sur WhatsApp">
@@ -390,11 +390,11 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contactez-nous</h3>
-                    <p>Email: platiniumservices@gmail.com</p>
+                    <p>Email: shwaibkabore19@gmail.com</p>
                     <p>Téléphone: +226 65 61 55 60</p>
                   </div>
             </div>
-            <p>&copy; 2024 Platinium-services. Tous droits réservés.</p>
+            <p>&copy; 2025 Platinium-services. Tous droits réservés.</p>
         </div>
     </footer>
     <script>
