--- a/service.html
+++ b/service.html
@@ -116,7 +116,7 @@
             align-items: center;
             color: var(--light-text);
             text-align: center;
-            padding: 100px 0 50px;
+            padding: 100px 4px 50px;
           }
         
           .hero-content {
@@ -477,7 +477,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-              <h1>Nos Services</h1>
+              <h2>Nos Services</h2>
               <p>Chez AgenceDigitale, nous offrons une gamme complète de services digitaux pour propulser votre entreprise vers de nouveaux sommets.</p>
             </div>
           </section>
@@ -590,8 +590,8 @@
                     <h2 class="section-title">Nos Tarifs</h2>
                     <div class="cards-container">
                         <div class="pricing-card">
-                            <h3>Création de site web</h3>
-                            <p class="price">À partir de 40.000f</p>
+                            <h3>Création de site Vitrine</h3>
+                            <p class="price">À partir de 50.000f</p>
                             <ul>
                                 <li>Design personnalisé</li>
                                 <li>Responsive</li>
@@ -600,7 +600,7 @@
                         </div>
                         <div class="pricing-card">
                             <h3>Conception graphique</h3>
-                            <p class="price">À partir de 5.000fr</p>
+                            <p class="price">À partir de 7.000fr</p>
                             <ul>
                                 <li>Logo</li>
                                 <li>Charte graphique</li>
@@ -609,16 +609,16 @@
                         </div>
                         <div class="pricing-card">
                             <h3>Montage Vidéo et 3D</h3>
-                            <p class="price">À partir de 8.000fr </p>
+                            <p class="price">À partir de 9.000fr </p>
                             <ul>
                                 <li>Montage vidéo</li>
-                                <li>Animations 2D/3D</li>
+                                <li>Animations 3D</li>
                                 <li>Effets spéciaux</li>
                             </ul>
                         </div>
                         <div class="pricing-card">
                             <h3>Marketing digital</h3>
-                            <p class="price">À partir de 35.000fr</p>
+                            <p class="price">À partir de 45.000fr</p>
                             <ul>
                                 <li>SEO</li>
                                 <li>Campagnes publicitaires</li>
@@ -629,29 +629,20 @@
                             <h3>Gestion réseaux sociaux</h3>
                             <p class="price">À partir de 25.000fr/mois</p>
                             <ul>
-                                <li>Création de contenu</li>
+                                <li>1 Post/semaines</li>
                                 <li>Gestion de communauté</li>
                                 <li>Analyses mensuelles</li>
                             </ul>
                         </div>
                         <div class="pricing-card">
                             <h3>Services de boostage</h3>
-                            <p class="price">À partir de 15.000fr/campagne</p>
+                            <p class="price">À partir de 50.000fr/campagne</p>
                             <ul>
                                 <li>Boost de publications</li>
                                 <li>Campagnes ciblées</li>
-                                <li>Optimisation des conversions</li>
                             </ul>
                         </div>
-                        <div class="pricing-card">
-                            <h3>Formations marketing digital</h3>
-                            <p class="price">Prix variant</p>
-                            <ul>
-                                <li>Ateliers pratiques</li>
-                                <li>Formations personnalisées</li>
-                                <li>Séminaires tendances</li>
-                            </ul>
-                        </div>
+
                     </div>
                 </section>
             </div>
@@ -674,15 +665,15 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contactez-nous</h3>
-                    <p>Email: platiniumservices@gmail.com</p>
+                    <p>Email: shwaibkabore19@gmail.com</p>
                     <p>Téléphone: +226 65 61 55 60</p>
                 </div>
             </div>
-            <p>&copy; 2024 Platinium-services. Tous droits réservés.</p>
+            <p>&copy; 2025 Platinium-services. Tous droits réservés.</p>
         </div>
     </footer>
     <div class="contact-buttons">
-        <a href="mailto:platiniumservices@gmail.com" class="contact-button" title="Envoyer un email">
+        <a href="mailto:shwaibkabore19@gmail.com" class="contact-button" title="Envoyer un email">
             <i class="fas fa-envelope"></i>
         </a>
         <a href="https://wa.me/22665615560" class="contact-button" target="_blank" rel="noopener noreferrer" title="Contacter sur WhatsApp">
