--- a/service.html
+++ b/service.html
@@ -220,6 +220,10 @@
             border: 2px solid var(--secondary-color);
         }
 
+        .link{
+            color:var(--secondary-color) ;
+            text-decoration: none;
+        }
         @media (max-width: 768px) {
             .nav-links {
                 display: none;
@@ -523,6 +527,20 @@
                                     <li>Effets spéciaux et VFX</li>
                                 </ul>
                             </div>
+                            <div class="service-item">
+                                <i class="fas fa-user-tie"></i>
+                                <h3>Création de Portfolio et CV Numériques</h3>
+                                <p>Nous créons des portfolios et CV numériques modernes et professionnels pour booster votre visibilité en ligne.</p>
+                                <ul>
+                                  <li>Design personnalisé et responsive</li>
+                                  <li>Optimisation pour les recruteurs</li>
+                                  <li>Intégration de vos réalisations (images, vidéos, liens)</li>
+                                  <li>Hébergement inclus</li>
+                                  <li>Support technique et mise à jour</li>
+                                </ul>
+                                <a  class="link" href="https://cv-exemple.vercel.app/">Exemple cv</a> <br/>
+                                <a  class="link" href="https://shwaib19.github.io/portfolio/index.html">Exemple Porte folio</a>
+                              </div>
                         </div>
                     </div>
                     <div class="services-column marketing">
@@ -586,6 +604,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- 
                 <section class="pricing-cards">
                     <h2 class="section-title">Nos Tarifs</h2>
                     <div class="cards-container">
@@ -645,6 +664,7 @@
 
                     </div>
                 </section>
+                -->
             </div>
         </section>
     </main>
